tests/test125.rael.exp
Error [tests/test125.rael:2:5]: the dog ate the cat
|     blame "the dog ate the cat"
|     ^
